--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,48 @@
-hi welcome to our project
+<!doctype html>
+<head>
+	<title>192 Final</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+</head>
+<body>
+	<section class="hero is-primary">
+  		<div class="hero-body">
+    		<div class="container">
+    			<div class="levels">
+      			<h1 class="title">Difference-Visualizer 🔬</h1>
+      			<h2 class="subtitle">Cis 192 S18 Final Project, by Valencia and Arun</h2>
+    		</div>
+  		</div>
+	</section>
+	<section class="section">
+		<div class="container">
+			<div class="columns">
+				<div class="column">
+					<h1 class="title is-size-4">About the project</h1>
+			  		<p>hi</p>
+				</div>
+				<div class="column">
+					<h3 class="subtitle">Enter sentences here:</h3>
+					<div class="field">
+						<label class="label">Sentence 1</label>
+		  				<div class="control">
+		    				<textarea class="textarea" id="sentence1" placeholder="Hi there" rows="2" method="GET"></textarea>
+		  				</div>
+		  			</div>
+		  			<div class="field">
+		  				<label class="label">Sentence 2</label>
+		  				<div class="control">
+		    				<textarea class="textarea" id="sentence2" placeholder="Analyze us" rows="2" method="GET"></textarea>
+		  				</div>
+		  			</div>
+		  			<div class="field">
+						<p class="control">
+					    	<button class="button is-success" method="POST">
+								<p>Go!</p>
+					    	</button>
+					  	</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</body>
