--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,40 @@
 <head>
 	<title>192 Final</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+	<script language="JavaScript">
+		function displayLineChart() {
+		    var data = {
+		        labels: ["Hamming", "Euclidean", "Manhattan", "Word2Vector"],
+		        datasets: [
+		            {
+		                label: "Similarity",
+		                data: [2, 3, 5, 7],
+		                backgroundColor: [
+			                'rgba(255, 99, 132)',
+			                'rgba(54, 162, 235)',
+			                'rgba(255, 206, 86)',
+			                'rgba(75, 192, 192)',
+			            ],		                
+		            },
+		        ]
+		    };
+		    var ctx = document.getElementById("lineChart").getContext("2d");
+		    var options = { 
+		    	scales: {
+            		yAxes: [{
+		                ticks: {
+		                    beginAtZero:true
+		                }
+            		}]
+        		}
+		    };
+		    var lineChart = new Chart(ctx).Bar(data, options);
+		}
+	</script>
 </head>
-<body>
+
+<body onload="displayLineChart();">
 	<section class="hero is-primary">
   		<div class="hero-body">
     		<div class="container">
@@ -18,29 +50,41 @@
 			<div class="columns">
 				<div class="column">
 					<h1 class="title is-size-4">About the project</h1>
-			  		<p>hi</p>
+			  		<p>hi yes we made dis thing</p>
+			  		<br><br>
+			  		<h3 class="title is-size-4">Enter sentences here</h3>
+			  		<form action="" method="post">
+						<div class="field">
+							<label class="label">Sentence 1</label>
+			  				<div class="control">
+			    				<textarea class="textarea" id="sentence1" placeholder="Hi there" rows="1" method="GET"></textarea>
+			  				</div>
+			  			</div>
+			  			<div class="field">
+			  				<label class="label">Sentence 2</label>
+			  				<div class="control">
+			    				<textarea class="textarea" id="sentence2" placeholder="Analyze us" rows="1" method="GET"></textarea>
+			  				</div>
+			  			</div>
+			  			<div class="field">
+							<p class="control">
+						    	<input class="button is-success" type="submit" value="Go!" />
+						  	</p>
+						</div>
+					</form>
 				</div>
 				<div class="column">
-					<h3 class="subtitle">Enter sentences here:</h3>
-					<div class="field">
-						<label class="label">Sentence 1</label>
-		  				<div class="control">
-		    				<textarea class="textarea" id="sentence1" placeholder="Hi there" rows="2" method="GET"></textarea>
-		  				</div>
-		  			</div>
-		  			<div class="field">
-		  				<label class="label">Sentence 2</label>
-		  				<div class="control">
-		    				<textarea class="textarea" id="sentence2" placeholder="Analyze us" rows="2" method="GET"></textarea>
-		  				</div>
-		  			</div>
-		  			<div class="field">
-						<p class="control">
-					    	<button class="button is-success" method="POST">
-								<p>Go!</p>
-					    	</button>
-					  	</p>
-					</div>
+					<h1 class="title is-size-4">Visualization</h1>
+						{% block content %}
+					  		<p>You entered:
+					  		{{ sentence1 }}
+					  		<br><br>
+					  		To be compared to:
+					  		{{ sentence2 }}
+					  		</p>
+				  		{% endblock %}
+				  		<br><br>
+				  		<canvas id="lineChart" width="400" height="400"></canvas>
 				</div>
 			</div>
 		</div>
