--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
   		<div class="hero-body">
     		<div class="container">
     			<div class="levels">
-      			<h1 class="title">Difference-Visualizer 🔬</h1>
+      			<h1 class="title">Phrase Difference Visualizer 🔬</h1>
       			<!-- <h2 class="subtitle">Cis 192 S18 Final Project, by Valencia and Arun</h2> -->
     		</div>
   		</div>
@@ -61,13 +61,13 @@
 			  		<h3 class="title is-size-4">Enter sentences here</h3>
 			  		<form method="get" action="/">
 						<div class="field">
-							<label class="label">Sentence 1</label>
+							<label class="label"> <strong> Sentence 1 </strong></label>
 			  				<div class="control">
 			    				<input class="textarea" name="sentence1" placeholder="Hi there" rows="1"></input>
 			  				</div>
 			  			</div>
 			  			<div class="field">
-			  				<label class="label">Sentence 2</label>
+			  				<label class="label"> <strong> Sentence 2 </strong></label>
 			  				<div class="control">
 			    				<input class="textarea" name="sentence2" placeholder="Analyze us" rows="1"></input>
 			  				</div>
@@ -80,7 +80,7 @@
 					</form>
 					<br><br>
 					<h1 class="title is-size-4">About</h1>
-			  		<p>This final project was created by Valencia and Arun for CIS 192, Spring 2018. Something something something</p>
+			  		<p>This final project was created by Valencia and Arun for CIS 192 Spring 2018. </p>
 				</div>
 				<div class="column">
 					<h1 class="title is-size-4">Visualization</h1>
